1.2.7:
Sam Lantinga - Fri Dec 28 08:34:54 PST 2007
 * Fixed buffer overflow in GIF loading code, discovered by Michael Skladnikiewicz

1.2.6:
Sam lantinga - Wed Jul 18 00:30:32 PDT 2007
 * Improved detection of libjpeg, libpng, and libtiff at configure time
 * PNG and TIFF images are correctly identified even if dynamic libraries
   to load them aren't available.
 * Fixed loading of TIFF images using libtiff 3.6
Sam Lantinga - Thu Jul 5 07:52:35 2007
 * Fixed static linking with libjpeg
Michael Koch - Tue Feb 13 10:09:17 2007
 * Fixed crash in IMG_ReadXPMFromArray()

1.2.5:
Maurizio Monge - Sun May 14 13:57:32 PDT 2006
 * Fixed loading BMP palettes at unusual offsets
Sam Lantinga - Thu May 11 21:51:19 PDT 2006
 * Added support for dynamically loading libjpeg, libpng, and libtiff.
Sam Lantinga - Sun Apr 30 01:48:40 PDT 2006
 * Added gcc-fat.sh for generating Universal binaries on Mac OS X
 * Updated libtool support to version 1.5.22
Sam Lantinga - Sat Feb  4 15:17:44 PST 2006
 * Added support for XV thumbnail images
Gautier Portet - Fri, 19 Mar 2004 17:35:12 +0100
 * Added support for 32-bit BMP files with alpha

1.2.4:
Pierre G. Richard - Fri, 30 Jul 2004 11:13:11 +0000 (UTC)
 * Added support for RLE encoded BMP files
Marc Le Douarain - Fri, 26 Dec 2003 18:23:42 +0100
 * Added EHB and HAM mode support to the ILBM loader
Sam Lantinga - Wed Nov 19 00:23:44 PST 2003
 * Updated libtool support for new mingw32 DLL build process
Holger Schemel - Mon, 04 Aug 2003 21:50:52 +0200
 * Fixed crash loading certain PCX images
Kyle Davenport - Sat, 19 Apr 2003 17:13:31 -0500
 * Added .la files to the development RPM, fixing RPM build on RedHat 8

1.2.3:
Ryan C. Gordon - Sat, 8 Feb 2003 09:36:33 -0500
 * Fixed memory leak with non-seekable SDL_RWops
Marc Le Douarain - Sun, 22 Dec 2002 22:59:51 +0100
 * Added 24-bit support to the ILBM format loader
Sam Lantinga - Sun Oct 20 20:55:46 PDT 2002
 * Added shared library support for MacOS X
Pete Shinners - Thu Jun 20 10:05:54 PDT 2002